# Isotropic-Surface-Remeshing

./: Isotropic Surface Remeshing.pptx  README.md
IsotropicSurfaceRemeshing/: CMakeLists.txt  README.md  main.cpp  main.h
